indexu.js fails in replica_set_passthrough when two phase index builds are enabled

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 4.3.1
    • Affects Version/s: None
    • Component/s: Storage
    • None
    • Fully Compatible
    • ALL
    • Execution Team 2019-11-18
    • 145
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      When the test jstests/core/indexu.js is run in a passthrough suites that uses replica sets, such as replica_sets_jscore_passthrough, the secondary node will crash with a 51101 fassert code. The cause of the fatal assertion is an index build failure from btree_key_generator.cpp with the error code 16746. This happens when two phase index builds are enabled.

       

      This can be reproduced with the following command line:

      buildscripts/resmoke.py --mongodSetParameters='{enableTwoPhaseIndexBuild: true}' --suites=replica_sets_jscore_passthrough jstests/core/indexu.js 

            Assignee:
            Benety Goh (Inactive)
            Reporter:
            Benety Goh (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: