SERVER-44393 split IndexBuildsCoordinator::_buildIndex() into hybrid index build phases